--- a/cv.html
+++ b/cv.html
@@ -1,1 +1,7 @@
 
+<div id="paypal-container-AQZ3FRSHFK88L"></div>
+<script>
+  paypal.HostedButtons({
+    hostedButtonId: "AQZ3FRSHFK88L",
+  }).render("#paypal-container-AQZ3FRSHFK88L")
+</script>
